--- a/index.html
+++ b/index.html
@@ -45,11 +45,15 @@
 		Donation Amount (Min 1$): <input type="text" name="lname"><br>
 		<input type="submit" value="Donate!"> </p>
 		
+		<center> <video controls autoplay muted>
+			<source src="mmfiles/video1.mp4" type="video/mp4">
+		</video> </center>
+		
 		<link rel="stylesheet" type="text/css" href="css/index css.css">
 	    <footer id="footer">
-			<a href="https://www.facebook.com/teamtreesofficial/"><div class="sprite"> </div> </a>
+			<a href="https://www.facebook.com/teamtreesofficial/"> <div class="sprite"> </div> </a>
 			<a href ="https://twitter.com/teamtreesofficl"> <div class="sprite1"> </div> </a>
-			<div class="sprite2"> </div>
+			<a href ="https://github.com/mjsudario/truly-trees-repository"> <div class="sprite2"> </div> </a>
 		</footer>
 	</body>
 </html>
